fixed pom.xml error